crates/fec-parser/tests/snapshots/itemizations__text_1949756_v8_5.snap
---
source: crates/fec-parser/tests/itemizations.rs
expression: "itemizations(\"TEXT_1949756.fec\")"
snapshot_kind: text
---
[
  {
    "family": "TEXT",
    "form_type": "TEXT",
    "filer_committee_id": "C00035600",
    "transaction_id": "X1",
    "back_reference_transaction_id": null,
    "back_reference_schedule_name": "F3XN",
    "text": "The Committee paid its employees with 100% Federal funds and disclosed the expenditures on Line 30b  when the individual spent more than 25% of their compensated time in a given month on Federal Election  Activity or activities in connection with a Federal Election. Those individuals who spent 25% or less of their  compensated time in a given month on FEA or activities in connection with a Federal Election were paid with  Federal funds and allocated on Schedule H4. In either case, all amounts spent for employee specific fringe  benefits consisting of health insurance, life insurance, retirement benefits and payroll taxes were paid for and  reported on a proportional basis equal to the amount associated with the individual who received the  compensation and the funds with which the individual was paid. Any reimbursements/allocation transfers to  the Committee's Federal account from its Non-Federal account for salaries and/or benefits were associated  with individuals whose activities do not exceed 25% in a given month. Receipts reported on Schedule A for  Line 17, unless otherwise noted, were for the purchase of access to the Committee's voter file. The  Committee believed this price properly reflected the fair market value of the file, which represented the  normal charge for such data in our state. All costs associated with the voter file were paid 100% out of the  Federal account and were therefore not allocable. Also, the Iowa Democratic Party owns its headquarters. Therefore,  there are no payments for rent, and limited payments for building expenses. All Administrative expenses have  been reported correctly, and no payments for administrative expenses are being paid from a non-federal  account. Finally, no funds received from a National Party Committee were earmarked for an exempt activity."
  },
  {
    "family": "TEXT",
    "form_type": "TEXT",
    "filer_committee_id": "C00035600",
    "transaction_id": "15724902T",
    "back_reference_transaction_id": "15724902",
    "back_reference_schedule_name": "SA11AI",
    "text": "Excess contribution transferred to Non-Federal. See Schedule B for Line 29"
  },
  {
    "family": "TEXT",
    "form_type": "TEXT",
    "filer_committee_id": "C00035600",
    "transaction_id": "501040417T",
    "back_reference_transaction_id": "501040417",
    "back_reference_schedule_name": "H4",
    "text": "Not for any federal candidate."
  },
  {
    "family": "TEXT",
    "form_type": "TEXT",
    "filer_committee_id": "C00035600",
    "transaction_id": "501039197T",
    "back_reference_transaction_id": "501039197",
    "back_reference_schedule_name": "SB29",
    "text": "Transfer Excess Contribution from William Harris. See Schedule A for Line 11a. on Committee's 2025 YE Report."
  },
  {
    "family": "TEXT",
    "form_type": "TEXT",
    "filer_committee_id": "C00035600",
    "transaction_id": "1250000350T",
    "back_reference_transaction_id": "1250000350",
    "back_reference_schedule_name": "SD10",
    "text": "Debt is an estimate pending additional invoices."
  },
  {
    "family": "TEXT",
    "form_type": "TEXT",
    "filer_committee_id": "C00035600",
    "transaction_id": "121NT",
    "back_reference_transaction_id": "121N",
    "back_reference_schedule_name": "H2",
    "text": "Liberty and Justice Fundraiser held November 9, 2025"
  }
]
